[package]
name = "test-dimensions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.56"
aws-sdk-cloudwatch = "0.29"
chrono = "0.4.26"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.14"
